Assessments/M1 Lead_Joshua Joseph/Assignment 4/SampleFlaskApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsaholic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: newsaholic
                port:
                  number: 5000
            path: /
            pathType: Prefix
